fix since java 16 usages